
<resources>
    <string name="app_name">ERCIS</string>
    <string-array name="menu_items_array">
        <item>Welcome</item>
        <item>The Department</item>
        <item>Student Affairs</item>
        <item>Prospective Students</item>
        <item>Research</item>
        <item>News</item>
        <item>The Campus</item>
        <item>Contact</item>
        <item>Copyright Page</item>
    </string-array>

    <string-array name="image_changes_campus">
        <item>department</item>
        <item>welcome</item>
        <item>library</item>
        <item>fh</item>
        <item>inside</item>
    </string-array>

    <string name="menu_item_title_alternative">ERCIS Department</string>

    <string name="welcome_info">To contact ERCIS, please use the following form:</string>
    <string name="edit_first_name"><b>First name</b></string>
    <string name="edit_last_name"><b>Last name</b></string>
    <string name="edit_email"><b>Email address</b></string>
    <string name="edit_email_incorrect">Incorrect email address, please retry</string>
    <string name="edit_email_incorrect_title">Incorrect email input</string>
    <string name="edit_message"><b>Enter your message</b></string>

    <string name="result_first_name">First name:&#160;</string>
    <string name="result_last_name">Last name:&#160;</string>
    <string name="result_email">Email address:&#160;</string>
    <string name="result_message">Entered message:&#160;</string>

    <string name="contact_email_subject">Message from ERCIS app</string>

    <string name="button_setDefaultText">Set default to Max Mustermann</string>
    <string name="button_send">Next</string>
    <string name="button_sendAsEmail">Send email</string>
    <string name="button_changePicture">Next image</string>
    <string name="email_chooser">Send email ...</string>
    <string name="button_backToSendMessage">Edit</string>
    <string name="ContactFragmentActivity">Enter your message</string>
    <string name="ContactResultFragmentActivity">Your message</string>
    <string name="Utilities">Utilities</string>

    <string name="default_first_name">Max</string>
    <string name="default_last_name">Mustermann</string>
    <string name="default_email">max.mustermann@gmail.de</string>
    <string name="default_message">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="action_settings">Settings</string>
    <string name="action_browser">Browser</string>
    <string name="action_map">ERCIS map</string>
    <string name="fragment_test">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="welcome_fragment"><b>Welcome to the ERCIS App!</b>\n This app informs you about the <b>E</b>uropean <b>R</b>esearch <b>C</b>enter for <b>I</b>nformation <b>S</b>ystems (ERCIS), which is located in the German city Münster. The ERCIS is an international network of scientists, conducting cooperative research in the field of Information Systems. \n \n To navigate through the app, swipe in the main menu from the left or tap on the ERCIS home icon.</string>

    <string name="department_fragment">The Department of Information Systems was founded in 1990 as part of the Münster School of Business and Economics (MSBE). More than 175 persons work at the department; there are seven professors, about 75 staff members and about 100 student assistants. Modern hardware and software facilities are available. The department is responsible for the Wirtschaftsinformatik bachelor program and the Information Systems master program in english language. Every year up to 100 students finish their studies to work in different sectors as consultants, software project managers, information managers, information system and organization designers etc. In application oriented research and development projects we connect business concepts with modern information and communication techniques to obtain holistic solutions. In cooperation with companies and associations we implement research results. The department provides consulting in designing of operational IT application and process organization.</string>
    <string name="department_fragment_prof_list">The department is represented by the following professors:</string>

    <string name="affairs_fragment">Affairs \n Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="prospective_fragment">Prospective \n Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="research_fragment">The area of Leonardo-Campus was initially used by the military. The Von-Einem Barracks (German: Von-Einem-Kaserne) were built between 1898 and 1901 and used until 1994, when the state of North Rhine-Westphalia bought the area in order to use it for Science and Research. The whole area has been rebuilt from 1999 to 2000 to the now present Leonardo-Campus. Moreover, buildings for a new art academy (German: Kunstakademie) were created. In 2009 the Faculty of Design of the University of Applied Sciences built their new buildings in a very modern style complementing the traditional look and atmosphere of the campus. Today a huge variety of research and educational institutions occupy Leonardo-Campus making it a true multidisciplinary research and higher education area.</string>
    <string name="news_fragment">News \n Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="events_fragment">Events \n Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="contact_fragment">Contact \n Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="nextitem_fragment">Nextitem \n Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>

    <string name="error_oncreate_ContactResultFragmentActivity">onCreate error</string>
    <string name="browser_default_address">https://www.google.com</string>
    <string name="title_activity_maps">Leonardo Campus</string>
    <string name="title_activity_gallery">Campus Gallery</string>

    <string name="google_maps_key">AIzaSyBNSs9YFyUfbCoSSEs_eUERAESgWV2TD8g</string>
    <string name="campus_show_map">Show on map</string>
    <string name="campus_address">Leonardo-Campus 3, 48149 Münster</string>
</resources>
